# tailorsift

./: README.md  initialize.sh  pyproject.toml
tailorsift/: cli.py  websvc.py
tests/: test_tailorsift.py
